export interface Slots {
    startDate : string;
    endDate : string;
    startTime : string;
    endTime : string;
}